# filemanagement_app_file_service

./: .clang-format  .gitignore  1.patch  BUILD.gn  CODEOWNERS  OAT.xml  README_ZH.md  app_file_service.gni  backup.gni  bundle.json  cfi_blocklist.txt  hisysevent.yaml
frameworks/js/backup_ext_context/: BUILD.gn  ext_backup_context_impl.cpp
frameworks/native/backup_ext/: BUILD.gn
interfaces/innerkits/native/: BUILD.gn
interfaces/kits/cj/: BUILD.gn
interfaces/kits/js/: BUILD.gn  backup_napi.versionscript
services/: 5203.json  5203.xml  BUILD.gn  backup.cfg  backup.para  backupservice.para  backupservice.para.dac
services/backup_sa/: BUILD.gn  ExtensionType.idl  IAncoBackupCallback.idl  IAncoRestoreCallback.idl  IExtension.idl  IService.idl  IServiceReverse.idl  ServiceReverseType.idl  ServiceType.idl
services/remote_file_share/src/: remote_file_share.cpp
test/fuzztest/: BUILD.gn
test/fuzztest/backupext_fuzzer/: BUILD.gn  backupext_fuzzer.cpp  backupext_fuzzer.h
test/fuzztest/backuponallbundlesfinished_fuzzer/: BUILD.gn  backuponallbundlesfinished_fuzzer.cpp  backuponallbundlesfinished_fuzzer.h
test/fuzztest/backuponbundlefinished_fuzzer/: BUILD.gn  backuponbundlefinished_fuzzer.cpp  backuponbundlefinished_fuzzer.h
test/fuzztest/backuponbundlestarted_fuzzer/: BUILD.gn  backuponbundlestarted_fuzzer.cpp  backuponbundlestarted_fuzzer.h
test/fuzztest/backuponfileready_fuzzer/: BUILD.gn  backuponfileready_fuzzer.cpp  backuponfileready_fuzzer.h
test/fuzztest/backuponprocessinfo_fuzzer/: BUILD.gn  backuponprocessinfo_fuzzer.cpp  backuponprocessinfo_fuzzer.h
test/fuzztest/backuponresultreport_fuzzer/: BUILD.gn  backuponresultreport_fuzzer.cpp  backuponresultreport_fuzzer.h
test/fuzztest/backuponscanninginfo_fuzzer/: BUILD.gn  backuponscanninginfo_fuzzer.cpp  backuponscanninginfo_fuzzer.h
test/fuzztest/backupsa_fuzzer/: BUILD.gn  backupsa_fuzzer.cpp  backupsa_fuzzer.h
test/fuzztest/backupsaanother_fuzzer/: BUILD.gn  backupsaanother_fuzzer.cpp  backupsaanother_fuzzer.h
test/fuzztest/backupsaappdone_fuzzer/: BUILD.gn  backupsaappdone_fuzzer.cpp  backupsaappdone_fuzzer.h
test/fuzztest/backupsaappend_fuzzer/: BUILD.gn  backupsaappend_fuzzer.cpp  backupsaappend_fuzzer.h
test/fuzztest/backupsaappendbundlesbackupsession_fuzzer/: BUILD.gn  backupsaappendbundlesbackupsession_fuzzer.cpp  backupsaappendbundlesbackupsession_fuzzer.h
test/fuzztest/backupsaappendbundlesincrementalbackupsession_fuzzer/: BUILD.gn  backupsaappendbundlesincrementalbackupsession_fuzzer.cpp  backupsaappendbundlesincrementalbackupsession_fuzzer.h
test/fuzztest/backupsaappendbundlesrestoresession_fuzzer/: BUILD.gn  backupsaappendbundlesrestoresession_fuzzer.cpp  backupsaappendbundlesrestoresession_fuzzer.h
test/fuzztest/backupsaappfileready_fuzzer/: BUILD.gn  backupsaappfileready_fuzzer.cpp  backupsaappfileready_fuzzer.h
test/fuzztest/backupsaappincrementaldone_fuzzer/: BUILD.gn  backupsaappincrementaldone_fuzzer.cpp  backupsaappincrementaldone_fuzzer.h
test/fuzztest/backupsaappincrementalfileready_fuzzer/: BUILD.gn  backupsaappincrementalfileready_fuzzer.cpp  backupsaappincrementalfileready_fuzzer.h
test/fuzztest/backupsafinish_fuzzer/: BUILD.gn  backupsafinish_fuzzer.cpp  backupsafinish_fuzzer.h
test/fuzztest/backupsagetfilehandle_fuzzer/: BUILD.gn  backupsagetfilehandle_fuzzer.cpp  backupsagetfilehandle_fuzzer.h
test/fuzztest/backupsagetincrementalfilehandle_fuzzer/: BUILD.gn  backupsagetincrementalfilehandle_fuzzer.cpp  backupsagetincrementalfilehandle_fuzzer.h
test/fuzztest/backupsagetincrementallocalcapabilities_fuzzer/: BUILD.gn  backupsagetincrementallocalcapabilities_fuzzer.cpp  backupsagetincrementallocalcapabilities_fuzzer.h
test/fuzztest/backupsagetlocalcapabilities_fuzzer/: BUILD.gn  backupsagetlocalcapabilities_fuzzer.cpp  backupsagetlocalcapabilities_fuzzer.h
test/fuzztest/backupsaincremental_fuzzer/: BUILD.gn  backupsaincremental_fuzzer.cpp  backupsaincremental_fuzzer.h
test/fuzztest/backupsainitbackupsession_fuzzer/: BUILD.gn  backupsainitbackupsession_fuzzer.cpp  backupsainitbackupsession_fuzzer.h
test/fuzztest/backupsainitincrementalbackupsession_fuzzer/: BUILD.gn  backupsainitincrementalbackupsession_fuzzer.cpp  backupsainitincrementalbackupsession_fuzzer.h
test/fuzztest/backupsainitrestoresession_fuzzer/: BUILD.gn  backupsainitrestoresession_fuzzer.cpp  backupsainitrestoresession_fuzzer.h
test/fuzztest/backupsapublishfile_fuzzer/: BUILD.gn  backupsapublishfile_fuzzer.cpp  backupsapublishfile_fuzzer.h
test/fuzztest/backupsapublishincrementalfile_fuzzer/: BUILD.gn  backupsapublishincrementalfile_fuzzer.cpp  backupsapublishincrementalfile_fuzzer.h
test/fuzztest/backupsarelease_fuzzer/: BUILD.gn  backupsarelease_fuzzer.cpp  backupsarelease_fuzzer.h
test/fuzztest/backupsastart_fuzzer/: BUILD.gn  backupsastart_fuzzer.cpp  backupsastart_fuzzer.h
test/fuzztest/backupservicestub_fuzzer/: BUILD.gn  backupservicestub_fuzzer.cpp  backupservicestub_fuzzer.h
test/fuzztest/backupservicestubbranch_fuzzer/: BUILD.gn  backupservicestubbranch_fuzzer.cpp  backupservicestubbranch_fuzzer.h  service.h
test/fuzztest/fileshare_fuzzer/: BUILD.gn  fileshare_fuzzer.cpp  fileshare_fuzzer.h
test/fuzztest/filesharecreatedeletefile_fuzzer/: BUILD.gn  filesharecreatedeletefile_fuzzer.cpp  filesharecreatedeletefile_fuzzer.h
test/fuzztest/remotefileshare_fuzzer/: BUILD.gn  remotefileshare_fuzzer.cpp
test/fuzztest/restoreonallbundlesfinished_fuzzer/: BUILD.gn  restoreonallbundlesfinished_fuzzer.cpp  restoreonallbundlesfinished_fuzzer.h
test/fuzztest/restoreonbundlefinished_fuzzer/: BUILD.gn  restoreonbundlefinished_fuzzer.cpp  restoreonbundlefinished_fuzzer.h
test/fuzztest/restoreonbundlestarted_fuzzer/: BUILD.gn  restoreonbundlestarted_fuzzer.cpp  restoreonbundlestarted_fuzzer.h
test/fuzztest/restoreonfileready_fuzzer/: BUILD.gn  restoreonfileready_fuzzer.cpp  restoreonfileready_fuzzer.h
test/fuzztest/restoreonprocessinfo_fuzzer/: BUILD.gn  restoreonprocessinfo_fuzzer.cpp  (+1 more)
tests/utils/: BUILD.gn
tools/backup_tool/: BUILD.gn
utils/: BUILD.gn
(+695 files in other folders)
