# Copyright (c) 2022-2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

path_backup = "//foundation/filemanagement/app_file_service"
path_module_out_tests = "filemanagement/app_file_service/backup"

path_ability_runtime = "//foundation/ability/ability_runtime"
path_access_token = "//base/security/access_token"
path_backup_js =
    "//foundation/filemanagement/app_file_service/interfaces/kits/js"
path_base = "//commonlibrary/c_utils/base"
path_distributedfile = "//foundation/distributeddatamgr/distributedfile"
path_faultloggerd = "//base/hiviewdfx/faultloggerd"
path_file_api = "//foundation/filemanagement/file_api"
path_googletest = "//third_party/googletest"
path_ipc = "//foundation/communication/ipc"
path_jsoncpp = "//third_party/jsoncpp"
path_napi = "//foundation/arkui/napi"
path_samgr = "//foundation/systemabilitymgr/samgr"
path_init = "//base/startup/init"
path_filemgmt_libn = "//foundation/filemanagement/file_api/utils/filemgmt_libn"
path_backup_mock = "//foundation/filemanagement/app_file_service/tests/mock"

backup_mock_parcel_include_dirs = [ "$path_backup_mock/parcel/include" ]
backup_mock_parcel_src = [ "$path_backup_mock/parcel/src/parcel.cpp" ]
backup_mock_parameter_include_dirs = [ "$path_backup_mock/parameter/include" ]
backup_mock_parameter_src = [ "$path_backup_mock/parameter/src/parameter.c" ]
backup_mock_src = [
  "$path_backup_mock/module_ipc/service_reverse_proxy_mock.cpp",
  "$path_backup_mock/module_ipc/service_stub_mock.cpp",
  "$path_backup_mock/module_ipc/svc_backup_connection_mock.cpp",
  "$path_backup_mock/module_ipc/svc_extension_proxy_mock.cpp",
]
backup_mock_session_manager_src =
    [ "$path_backup_mock/module_ipc/svc_session_manager_mock.cpp" ]
backup_mock_scheduler_src =
    [ "$path_backup_mock/module_sched/sched_scheduler_mock.cpp" ]
backup_mock_service_src = [ "$path_backup_mock/module_ipc/service_mock.cpp" ]
backup_mock_utils_include = [ "$path_backup_mock/utils_mock/include" ]
backup_mock_proxy_src = [
  "$path_backup_mock/backup_kit_inner/service_proxy_mock.cpp",
  "$path_backup_mock/utils_mock/src/utils_mock_global_variable.cpp",
  "$path_backup/frameworks/native/backup_kit_inner/src/b_file_info.cpp",
]
