# Copyright (c) 2022-2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/ohos/sa_profile/sa_profile.gni")

group("backup_para_etc") {
  deps = [
    ":backup.para",
    ":backupservice.para",
    ":backupservice.para.dac",
  ]
}

ohos_sa_profile("backup_sa_profile") {
  sources = [ "5203.json" ]
  part_name = "app_file_service"
}

ohos_prebuilt_etc("backup_sa_etc") {
  source = "backup.cfg"
  relative_install_dir = "init"
  part_name = "app_file_service"
  subsystem_name = "filemanagement"
}

ohos_prebuilt_etc("backup.para") {
  source = "backup.para"
  install_images = [ "system" ]
  part_name = "app_file_service"
  subsystem_name = "filemanagement"
  relative_install_dir = "param"
}

ohos_prebuilt_etc("backupservice.para") {
  source = "backupservice.para"
  part_name = "app_file_service"
  module_install_dir = "etc/param"
  subsystem_name = "filemanagement"
}

ohos_prebuilt_etc("backupservice.para.dac") {
  source = "backupservice.para.dac"
  part_name = "app_file_service"
  module_install_dir = "etc/param"
  subsystem_name = "filemanagement"
}
