# Copyright (c) 2022-2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/filemanagement/app_file_service/backup.gni")

ohos_shared_library("backup_sa") {
  stack_protector_ret = true
  sanitize = {
    integer_overflow = true
    ubsan = true
    boundary_sanitize = true
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  sources = [
    "src/module_app_gallery/app_gallery_dispose_proxy.cpp",
    "src/module_external/bms_adapter.cpp",
    "src/module_external/sms_adapter.cpp",
    "src/module_ipc/service.cpp",
    "src/module_ipc/service_incremental.cpp",
    "src/module_ipc/service_incremental_reverse_proxy.cpp",
    "src/module_ipc/service_reverse_proxy.cpp",
    "src/module_ipc/service_stub.cpp",
    "src/module_ipc/svc_backup_connection.cpp",
    "src/module_ipc/svc_extension_incremental_proxy.cpp",
    "src/module_ipc/svc_extension_proxy.cpp",
    "src/module_ipc/svc_restore_deps_manager.cpp",
    "src/module_ipc/svc_session_manager.cpp",
    "src/module_notify/notify_work_service.cpp",
    "src/module_sched/sched_scheduler.cpp",
  ]

  defines = [
    "LOG_DOMAIN=0xD004303",
    "LOG_TAG=\"BackupSA\"",
  ]

  include_dirs = [
    "include",
    "include/module_notify",
  ]

  deps = [
    "${path_backup}/interfaces/inner_api/native/backup_kit_inner:backup_kit_inner",
    "${path_backup}/utils:backup_utils",
  ]

  external_deps = [
    "ability_base:want",
    "ability_runtime:ability_manager",
    "access_token:libaccesstoken_sdk",
    "bundle_framework:appexecfwk_base",
    "bundle_framework:appexecfwk_core",
    "c_utils:utils",
    "common_event_service:cesfwk_innerkits",
    "hilog:libhilog",
    "hitrace:hitrace_meter",
    "init:libbegetutil",
    "ipc:ipc_core",
    "jsoncpp:jsoncpp",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
    "storage_service:storage_manager_sa_proxy",
  ]

  use_exceptions = true
  part_name = "app_file_service"
  subsystem_name = "filemanagement"
}
