# Copyright (c) 2022-2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

group("fuzztest") {
  testonly = true

  deps = [
    # deps file
    "backupext_fuzzer:BackupExtFuzzTest",
    "backupsa_fuzzer:BackupSaFuzzTest",
    "backupsaappendbundlesbackupsession_fuzzer:BackupSaAppendBundlesBackupSessionFuzzTest",
    "backupsaappendbundlesincrementalbackupsession_fuzzer:BackupSaAppendBundlesIncrementalBackupSessionFuzzTest",
    "backupsaappincrementaldone_fuzzer:BackupSaAppIncrementalDoneFuzzTest",
    "backupsaappincrementalfileready_fuzzer:BackupSaAppIncrementalFileReadyFuzzTest",
    "backupsagetfilehandle_fuzzer:BackupSaGetFileHandleFuzzTest",
    "backupsagetincrementalfilehandle_fuzzer:BackupSaGetIncrementalFileHandleFuzzTest",
    "backupsagetincrementallocalcapabilities_fuzzer:BackupSaGetIncrementalLocalCapabilitiesFuzzTest",
    "backupsainitincrementalbackupsession_fuzzer:BackupSaInitIncrementalBackupSessionFuzzTest",
    "backupsapublishincrementalfile_fuzzer:BackupSaPublishIncrementalFileFuzzTest",
    "backupsarelease_fuzzer:BackupSaReleaseFuzzTest",
    "backupservicestub_fuzzer:BackupServiceStubFuzzTest",
    "fileshare_fuzzer:FileShareFuzzTest",
    "remotefileshare_fuzzer:RemoteFileShareFuzzTest",
    "servicereverse_fuzzer:ServiceReverseFuzzTest",
    "svcrestoredepsmanager_fuzzer:SvcRestoreDepsManagerFuzzTest",
  ]
}
