# Copyright (c) 2022-2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

group("fuzztest") {
  testonly = true

  deps = [
    # deps file
    "backupext_fuzzer:BackupExtFuzzTest",
    "backupsa_fuzzer:BackupSaFuzzTest",
    "backupsaappdone_fuzzer:BackupSaAppDoneFuzzTest",
    "backupsaappendbundlesbackupsession_fuzzer:BackupSaAppendBundlesBackupSessionFuzzTest",
    "backupsaappendbundlesincrementalbackupsession_fuzzer:BackupSaAppendBundlesIncrementalBackupSessionFuzzTest",
    "backupsaappendbundlesrestoresession_fuzzer:BackupSaAppendBundlesRestoreSessionFuzzTest",
    "backupsaappfileready_fuzzer:BackupSaAppFileReadyFuzzTest",
    "backupsaappincrementaldone_fuzzer:BackupSaAppIncrementalDoneFuzzTest",
    "backupsaappincrementalfileready_fuzzer:BackupSaAppIncrementalFileReadyFuzzTest",
    "backupsafinish_fuzzer:BackupSaFinishFuzzTest",
    "backupsagetfilehandle_fuzzer:BackupSaGetFileHandleFuzzTest",
    "backupsagetincrementalfilehandle_fuzzer:BackupSaGetIncrementalFileHandleFuzzTest",
    "backupsagetincrementallocalcapabilities_fuzzer:BackupSaGetIncrementalLocalCapabilitiesFuzzTest",
    "backupsagetlocalcapabilities_fuzzer:BackupSaGetLocalCapabilitiesFuzzTest",
    "backupsainitbackupsession_fuzzer:BackupSaInitBackupSessionFuzzTest",
    "backupsainitincrementalbackupsession_fuzzer:BackupSaInitIncrementalBackupSessionFuzzTest",
    "backupsainitrestoresession_fuzzer:BackupSaInitRestoreSessionFuzzTest",
    "backupsapublishfile_fuzzer:BackupSaPublishFileFuzzTest",
    "backupsapublishincrementalfile_fuzzer:BackupSaPublishIncrementalFileFuzzTest",
    "backupsarelease_fuzzer:BackupSaReleaseFuzzTest",
    "backupsastart_fuzzer:BackupSaStartFuzzTest",
    "backupservicestub_fuzzer:BackupServiceStubFuzzTest",
    "fileshare_fuzzer:FileShareFuzzTest",
    "remotefileshare_fuzzer:RemoteFileShareFuzzTest",
    "servicereverse_fuzzer:ServiceReverseFuzzTest",
    "svcrestoredepsmanager_fuzzer:SvcRestoreDepsManagerFuzzTest",
  ]
}
