# Copyright (c) 2022-2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("//foundation/filemanagement/app_file_service/backup.gni")

config("test_util_public_config") {
  include_dirs = [ "include" ]
}

ohos_static_library("backup_test_utils") {
  branch_protector_ret = "pac_ret"

#  stack_protector_ret = true
  sanitize = {
    integer_overflow = true
    ubsan = true
    boundary_sanitize = true
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  testonly = true

  sources = [ "src/test_manager.cpp" ]

  public_configs = [ ":test_util_public_config" ]

  deps = [
    "${path_backup}/utils:backup_utils",
    "${path_googletest}:gmock_main",
  ]
  external_deps = [ "hilog:libhilog" ]
  use_exceptions = true
  part_name = "app_file_service"
  subsystem_name = "filemanagement"
}
