# Copyright (c) 2022-2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/filemanagement/app_file_service/backup.gni")

ohos_executable("backup_tool") {
  sources = [
    "src/main.cpp",
    "src/tools_op.cpp",
    "src/tools_op_backup.cpp",
    "src/tools_op_check_sa.cpp",
    "src/tools_op_help.cpp",
    "src/tools_op_restore.cpp",
    "src/tools_op_restore_async.cpp",
  ]

  defines = [
    "LOG_DOMAIN=0xD004304",
    "LOG_TAG=\"BackupTool\"",
  ]

  include_dirs = [ "include" ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "hitrace:hitrace_meter",
    "ipc:ipc_core",
  ]

  deps = [
    "${path_backup}/interfaces/inner_api/native/backup_kit_inner:backup_kit_inner",
    "${path_backup}/utils/:backup_utils",
    "${path_jsoncpp}:jsoncpp",
  ]

  use_exceptions = true
  install_enable = true
  part_name = "app_file_service"
  subsystem_name = "filemanagement"
}
